--- a/jmetricsApp/.project
+++ b/jmetricsApp/.project
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>core</name>
+	<name>test-app</name>
 	<comment></comment>
 	<projects>
+		<project>core</project>
+		<project>inmemorymetrics</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
@@ -32,5 +34,6 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
+		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 	</natures>
 </projectDescription>
